[gd_scene load_steps=14 format=2]

[ext_resource path="res://character/creatures/creature.tscn" type="PackedScene" id=1]
[ext_resource path="res://character/creatures/minyak/minyak.gd" type="Script" id=2]
[ext_resource path="res://character/creatures/minyak/Minyak_nightatkt.png" type="Texture" id=3]
[ext_resource path="res://character/creatures/minyak/Minyak-night.png" type="Texture" id=4]
[ext_resource path="res://character/creatures/minyak/minyak_ai.gd" type="Script" id=5]
[ext_resource path="res://interaction/interaction.tscn" type="PackedScene" id=6]
[ext_resource path="res://character/creatures/minyak/minyak_interaction.gd" type="Script" id=7]
[ext_resource path="res://character/damage.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]

resource_name = "attack"
length = 0.6
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]

resource_name = "idle-right"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "resting"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Creature" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
max_health = 1

[node name="OrientedSprite" parent="." index="0"]

position = Vector2( -0.475655, -8.32394 )
texture = ExtResource( 3 )
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="OrientedSprite" index="0"]

root_node = NodePath("..")
autoplay = "idle-right"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack = SubResource( 1 )
anims/idle-right = SubResource( 2 )
anims/resting = SubResource( 3 )
blend_times = [  ]

[node name="CollisionBox" parent="." index="1"]

position = Vector2( -1.88779, 0.00780487 )
scale = Vector2( 0.799634, 0.703184 )
shape = SubResource( 4 )

[node name="AI" parent="." index="3"]

script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="AI" index="0"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Area2D" type="Area2D" parent="." index="6"]

position = Vector2( -1.7094, -5.72796 )
scale = Vector2( 0.868208, 0.890613 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( -1.29323, -2.61477 )
scale = Vector2( 2.37045, 2.2292 )
shape = SubResource( 5 )

[node name="Interaction" parent="." index="7" instance=ExtResource( 6 )]

script = ExtResource( 7 )

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Death" parent="SFX" index="7"]

stream = null

[connection signal="animation_finished" from="OrientedSprite/AnimationPlayer" to="AI" method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="AI/Timer" to="AI" method="_on_Timer_timeout"]


